--- a/test/fixtures/compra_bebidas.yml
+++ b/test/fixtures/compra_bebidas.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  compra: one
   bebida: one
-  cant: 1
 
 two:
+  compra: two
   bebida: two
-  cant: 1
