--- a/test/fixtures/compra_productos.yml
+++ b/test/fixtures/compra_productos.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  bebida: one
-  cant: 1
+  compra: one
+  producto: one
 
 two:
-  bebida: two
-  cant: 1
+  compra: two
+  producto: two
