--- a/test/fixtures/compras.yml
+++ b/test/fixtures/compras.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  bebida: one
-  cant: 1
+  fecha: 2017-06-20
 
 two:
-  bebida: two
-  cant: 1
+  fecha: 2017-06-20
