--- a/test/fixtures/stocks.yml
+++ b/test/fixtures/stocks.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  bebida: one
+  bebida_id: 1
   cant: 1
 
 two:
-  bebida: two
+  bebida_id: 1
   cant: 1
